# Liza-s-Labs

./: README.md
LizaLabs/1Lab/: 1lab  1lab.cpp  Очет 1 Практическая.docx
LizaLabs/2Lab/: 2lab  2lab.cpp  Отчет 2 Практическая.docx
LizaLabs/3Lab/: 3lab  3lab.cpp  Отчет 3 Практическая.docx
LizaLabs/4Lab/: 4lab  4lab.cpp  data.txt  result.json  Отчет 4 Практическая.docx
LizaLabs/CoursePaper/: Отчет Курсовая работа.docx
LizaLabs/CoursePaper/Graph/: CMakeLists.txt
LizaLabs/CoursePaper/Graph/include/: CoordinateSystem.hpp  FunctionPlot.hpp  GraphApp.hpp
LizaLabs/CoursePaper/Graph/src/: CoordinateSystem.cpp  FunctionPlot.cpp  GraphApp.cpp  main.cpp
LizaLabs/CoursePaper/Plane/: CMakeLists.txt
LizaLabs/CoursePaper/Plane/include/: Plane.hpp  PlaneApp.hpp  Scene.hpp
LizaLabs/CoursePaper/Plane/src/: Plane.cpp  PlaneApp.cpp  Scene.cpp  main.cpp
